<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.LevelOptionsFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/title_choice_level"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_test_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_purple"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:text="@string/test_level"
        android:textSize="20sp"
        app:cornerRadius="4dp"
        tools:ignore="VisualLintButtonSize" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_easy_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/level_easy"
        android:textSize="20sp"
        app:cornerRadius="4dp"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_medium_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/level_medium"
        android:textSize="20sp"
        app:cornerRadius="4dp"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_hard_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/level_hard"
        android:textSize="20sp"
        app:cornerRadius="4dp"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>